force-app/main/default/objects/EC_ApexException__c/EC_ApexException__c.object-meta.xml
<CustomObject>
    <label>Exception</label>
    <nameField>
        <label>Exception Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Exceptions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>