force-app/main/default/objects/EC_ApexException__c/fields/EC_Calling_Context__c.field-meta.xml
<CustomField>
    <fullName>EC_Calling_Context__c</fullName>
    <label>Calling Context</label>
    <length>50</length>
    <type>Text</type>
</CustomField>