force-app/main/default/objects/EC_ApexException__c/fields/EC_Class_Name__c.field-meta.xml
<CustomField>
    <fullName>EC_Class_Name__c</fullName>
    <label>Class Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>