force-app/main/default/objects/EC_ApexException__c/fields/EC_Error_Message__c.field-meta.xml
<CustomField>
    <fullName>EC_Error_Message__c</fullName>
    <label>Error Message</label>
    <type>TextArea</type>
</CustomField>