force-app/main/default/objects/EC_ApexException__c/fields/EC_Exception_Type__c.field-meta.xml
<CustomField>
    <fullName>EC_Exception_Type__c</fullName>
    <label>Exception Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>