force-app/main/default/objects/EC_ApexException__c/fields/EC_GovLimitKpi__c.field-meta.xml
<CustomField>
    <fullName>EC_GovLimitKpi__c</fullName>
    <label>Gov Limit KPI</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>