force-app/main/default/objects/EC_ApexException__c/fields/EC_Line_Number__c.field-meta.xml
<CustomField>
    <fullName>EC_Line_Number__c</fullName>
    <label>Line Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>