force-app/main/default/objects/EC_ApexException__c/fields/EC_Method_Name__c.field-meta.xml
<CustomField>
    <fullName>EC_Method_Name__c</fullName>
    <label>Method Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>