force-app/main/default/objects/EC_ApexException__c/fields/EC_Note__c.field-meta.xml
<CustomField>
    <fullName>EC_Note__c</fullName>
    <label>Note</label>
    <type>TextArea</type>
</CustomField>