force-app/main/default/objects/EC_ApexException__c/fields/EC_Reporting_User__c.field-meta.xml
<CustomField>
    <fullName>EC_Reporting_User__c</fullName>
    <label>Reporting user</label>
    <length>50</length>
    <type>Text</type>
</CustomField>