force-app/main/default/objects/EC_ApexException__c/fields/EC_Stack_Trace__c.field-meta.xml
<CustomField>
    <fullName>EC_Stack_Trace__c</fullName>
    <label>Stack Trace</label>
    <length>50</length>
    <type>Text</type>
</CustomField>