force-app/main/default/objects/EC_ApexException__c/fields/EC_Trigger__c.field-meta.xml
<CustomField>
    <fullName>EC_Trigger__c</fullName>
    <label>Trigger</label>
    <length>50</length>
    <type>Text</type>
</CustomField>