force-app/main/default/objects/EC_ApexException__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>EC_Class_Name__c</columns>
    <columns>EC_Error_Message__c</columns>
    <columns>EC_GovLimitKpi__c</columns>
    <columns>EC_Method_Name__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>